--- a/index.html
+++ b/index.html
@@ -1,66 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
+    <title>Proyecto Final JavaScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto Final</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/scripts.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
 
   <body>
-    <div class="centrado">
-      <h1 class="textoCentrado" id="bienvenida"></h1>
-      <form action="guardarUsuario" id="formGuardarUsuario">
-        <div id="datosUsuario">
-          <label class="etiqInput" for="nombre"><b>Nombre</b></label>
-          <input
-            id="inputNombre"
-            type="text"
-            placeholder="Nombre"
-            name="nombre"
-            required
-          />
-
-          <label class="etiqInput" for="apellido"><b>Apellido</b></label>
-          <input
-            id="inputApellido"
-            type="text"
-            placeholder="Apellido"
-            name="apellido"
-            required
-          />
-          <br />
-          <label class="etiquetaInput" for="correo"><b>Correo</b></label>
-          <input
-            id="inputCorreo"
-            type="text"
-            placeholder="Correo"
-            name="correo"
-            required
-          />
-          <br /><label class="etiqInput" for="telefono"><b>Teléfono</b></label>
-          <input
-            id="inputTelefono"
-            type="text"
-            placeholder="Telefono"
-            name="telefono"
-            required
-          />
-          <br /><label class="etiqInput"><b>Modo Animado</b></label>
-          <label class="switch">
-            <input type="checkbox" id="modoAnimado" />
-            <span class="slider round"></span>
-          </label>
+    <div id="loader"></div>
+    <div id="contenedor">
+      <div id="central">
+        <div id="login">
+          <div class="titulo">Bienvenido</div>
+          <form action="guardarUsuario" id="formGuardarUsuario">
+            <input
+              type="text"
+              id="inputUsuario"
+              name="usuario"
+              placeholder="Usuario"
+              required
+            />
+            <input
+              type="password"
+              id="inputContraseña"
+              placeholder="Contraseña"
+              name="password"
+              required
+            />
+            <input
+              type="text"
+              id="inputCorreo"
+              name="correo"
+              placeholder="Correo Electronico"
+              required
+            />
+            <button type="submit" title="Registrar" name="Registrar">
+              Registrarme
+            </button>
+            <button
+              type="submit"
+              title="Reiniciar"
+              name="Reiniciar"
+              id="recargar"
+            >
+              Reiniciar
+            </button>
+          </form>
         </div>
-        <div class="container gap25">
-          <button type="submit" class="boton w-50">Guardar Usuario</button>
-          <button id="recargar" type="reset" class="boton fondo-rojo w-50">
-            Recargar
-          </button>
-        </div>
-      </form>
+      </div>
     </div>
   </body>
 </html>
