--- a/index.html
+++ b/index.html
@@ -37,14 +37,19 @@
               placeholder="Correo Electronico"
               required
             />
-            <button type="submit" title="Registrar" name="Registrar">
+            <button
+              type="submit"
+              title="Registrar"
+              name="Registrar"
+              id="guardar"
+            >
               Registrarme
             </button>
             <button
               type="submit"
               title="Reiniciar"
               name="Reiniciar"
-              id="recargar"
+              id="reiniciar"
             >
               Reiniciar
             </button>
